[package]
name = "airquery"
version = "0.1.0"
edition = "2021"
rust-version = "1.64" # or higher, needed because of some FFIs used by dependencies

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1.56"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.29", features = ["derive", "env"] }
sqlparser = "0.18.0"
termcolor = "1.1"
datafusion = "20.0.0"
futures = "0.3"
indexmap = "1.9.2"
chrono = "0.4.23"
rust_decimal = "1.27"
log = "0.4.17"
simple_logger = "4.0.0"
dotenvy = "0.15.6"

[patch.crates-io]
arrow = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-cast = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-ipc = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-schema = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-buffer = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-array = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-select = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-string = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-row = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
arrow-data = { git = "https://github.com/SirStoke/arrow-rs.git", branch = "decimal-json-writer-34.0.0" }
