[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
datafusion = { git = "https://github.com/SirStoke/arrow-datafusion.git", branch = "20.0.0-wasm" }
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
web-sys = { version = "0.3.63", features = ['console'] }

[profile.release]
opt-level = "s"